[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/scenes/ColorContainer/ColorContainer.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="CanvasItemMaterial" id=1]

render_priority = 0
blend_mode = 0
light_mode = 0

[sub_resource type="ParticlesMaterial" id=2]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 180.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 150.0
initial_velocity_random = 0.0
angular_velocity = 45.0
angular_velocity_random = 0.0
orbit_velocity = 0.5
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 10.0
scale_random = 0.0
color = Color( 1, 1, 1, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Scale" ]

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 91.0162

[node name="ColorContainer" type="Node2D" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Visibility" ]
myColor = Color( 1, 1, 1, 1 )

[node name="Image" type="Sprite" parent="." index="0"]

material = SubResource( 1 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Material", "Transform", "Visibility", "Z Index" ]

[node name="Particles" type="Particles2D" parent="." index="1"]

z_index = -1
emitting = false
amount = 8
lifetime = 1.0
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -25, -25, 50, 50 )
local_coords = true
draw_order = 0
process_material = SubResource( 2 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Z Index" ]

[node name="Area" type="Area2D" parent="." index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 1024
collision_mask = 1024
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Z Index" ]

[node name="ColorCollision" type="CollisionShape2D" parent="Area" index="0"]

shape = SubResource( 3 )
_sections_unfolded = [ "Visibility", "Z Index" ]

[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]

[connection signal="area_exited" from="Area" to="." method="_on_Area_area_exited"]

[connection signal="input_event" from="Area" to="." method="_on_Area_input_event"]


